# Platform-rally-extension

./: .dockerignore  .gitignore  .talismanrc  .yamllint  BUGS_FOUND.md  CI_CD_DOCUMENTATION.md  CI_ROBUSTNESS_SUMMARY.md  DEPLOYMENT_ANALYSIS.md  E2E_TESTING_SETUP.md  E2E_TESTING_SUCCESS.md  IMPROVEMENT_OPPORTUNITIES.md  PLAYWRIGHT_BETTER_APPROACH.md  README.md  TESTING.md  compose.override.prod.yml  compose.override.yml  manifest.json  package-lock.json  package.json  platform-rally.code-workspace  run-tests.sh  sonar-project.properties  test_timezone_conversion.js
api-rally/: .dockerignore  .flake8  Dockerfile  Dockerfile.prod  README.md  pyproject.toml  pytest.ini  test_abac.py
api-rally/app/: exception.py  main.py
api-rally/app/api/: abac_deps.py  api.py  auth.py  deps.py
api-rally/app/api/api_v1/: _deps.py  activities.py  checkpoint.py  rally_duration.py  rally_settings.py  staff_evaluation.py  staff_evaluation_utils.py  team.py  team_auth.py  team_members.py  user.py  versus.py
api-rally/app/core/: abac.py  config.py  logging.py
api-rally/app/crud/: __init__.py  _deps.py  base.py  crud_activity.py  crud_checkpoint.py  crud_rally_settings.py  crud_rally_staff_assignment.py  crud_team.py  crud_user.py  crud_versus.py  rally_settings.py
api-rally/app/db/: init_db.py  seed_data.py  session.py  setup.sql
api-rally/app/models/: __init__.py  activity.py  activity_factory.py  base.py  checkpoint.py  nei_user.py  rally_settings.py  rally_staff_assignment.py  team.py  user.py
api-rally/app/models/activities/: ACTIVITY_SCORING.md  __init__.py  base.py  boolean.py  general.py  score_based.py  team_vs.py  time_based.py
api-rally/app/schemas/: activity.py  activity_types.py  checkpoint.py  rally_settings.py  rally_staff_assignment.py  team.py  team_auth.py  team_members.py  user.py  versus.py
api-rally/app/services/: scoring_service.py
api-rally/app/tests/: conftest.py  test_api.py  test_crud.py
api-rally/app/tests/api/: test_abac.py  test_activities.py  test_api.py  test_auth.py  test_checkpoint.py  test_checkpoint_visibility.py  test_rally_duration.py  test_versus.py  (+5 more)
api-rally/app/utils/: rally_duration.py
(+285 files in other folders)
