[tool.poetry]
name = "api-rally"
version = "0.1.0"
description = "Rally Tascas Service"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.44"
pydantic = "^2.4.2"
loguru = "^0.7.2"
python-multipart = "^0.0.20"
fastapi = "0.121.3"
python-jose = "^3.5.0"
psycopg2-binary = "^2.9.5"
pydantic-settings = "^2.2.1"
orjson = "^3.11.4"
aiocache = "^0.12.2"
alembic = "^1.17.1"
h11 = ">=0.16.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "1.6.0"
uvicorn = "^0.38.0"
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.13"
black = "^24.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
httpx = "0.28.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.5"

[tool.mypy]
exclude = ["app/tests"]
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "aiocache.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.schema"
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
